🆕 AuthPage: поправил вёрстку

--- a/src/views/AuthPage/AuthPage.module.scss
+++ b/src/views/AuthPage/AuthPage.module.scss
@@ -1,8 +1,8 @@
 .input-wrapper {
   display: block;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1.3rem;
 }
 
-.subtitle {
-  margin-bottom: 2rem;
+.title {
+  margin: 2rem 0;
 }
